# playdate-cpp-extensions

./: .gitignore  AnimatedText_8h_source.html  Arpeggiator_8h_source.html  AudioSample_8h_source.html  BitCrusher_8h_source.html  Border_8h_source.html  ButtonManager_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  Channel_8h_source.html  ClickCounter_8h_source.html  CollisionInfo_8h_source.html  Color_8h_source.html  Colors_8h_source.html  ComponentFocusView_8h_source.html  Component_8h_source.html  ControlSignal_8h_source.html  CrankManager_8h_source.html  CustomLFO_8h_source.html  DecibelRuler_8h_source.html  Delay_8h_source.html  Doxyfile  Envelope_8h_source.html  FileList_8h_source.html  File_8h_source.html  Filter_8h_source.html  Font_8h_source.html  GlobalPlaydateAPI_8h_source.html  Graphics_8h_source.html  GridView_8h_source.html  ImageTable_8h_source.html  Image_8h_source.html  InputContext_8h_source.html  LFO_8h_source.html  LevelMeter_8h_source.html  ListMenuComponent_8h_source.html  LookAndFeel_8h_source.html  MenuComponentBase_8h_source.html  Microphone_8h_source.html  ModulationChannel_8h_source.html  (+572 more)
examples/: CMakeLists.txt
examples/context_menus/: CMakeLists.txt
examples/context_menus/src/: App.cpp  App.h  main.cpp
examples/hello_world/: CMakeLists.txt
examples/hello_world/src/: HelloWorld.cpp  HelloWorld.h  main.cpp
examples/look_and_feel/: CMakeLists.txt
examples/look_and_feel/src/: App.cpp  App.h
examples/pdcppong/: CMakeLists.txt
examples/pdcppong/src/: Ball.cpp  Ball.h  BlockSprite.cpp  BlockSprite.h  ComputerAI.cpp  ComputerAI.h  Game.cpp  Game.h  LaunchReadyIndicator.cpp  LaunchReadyIndicator.h  ScoreBoard.cpp  ScoreBoard.h  Sounds.cpp  Sounds.h  SpriteTags.h  SystemMenu.cpp  SystemMenu.h  main.cpp
examples/synthesis/: CMakeLists.txt
examples/synthesis/src/: Synthesis.cpp  Synthesis.h  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+47 more)
(+146 files in other folders)
