message(STATUS "Building PDCPP Extension Examples")
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/pdcppong)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hello_world)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/context_menus)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/look_and_feel)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/synthesis)